[project]
name = "switchbase-teamview"
version = "0.1.0"
description = "Python client and CLI for TeamView management APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "matplot>=0.1.9",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "typer>=0.16.0",
    "uvicorn>=0.34.2",
]

[project.scripts]
teamview-cli = "switchbase_teamview.cli:run"
teamview-web = "switchbase_teamview.web:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["switchbase_teamview"]

[tool.hatch.build.targets.sdist]
include = [
    ".codex/check-maxline.json",
    "switchbase_teamview/**/*.py",
    "switchbase_teamview/**/*.html",
    "switchbase_teamview/**/*.css",
    "switchbase_teamview/**/*.js",
    "scripts/**/*.py",
    "tests/**/*.py",
    ".env.template",
    ".gitignore",
    "README.md",
    "teamview_aliases.template.json",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
